- fixed menu expansion on mobile

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -12,6 +12,10 @@ body {
   flex-grow: 1;
 }
 
+.navbar {
+  margin-top: 80px;
+}
+
 /* Scroller */
 .scroller {
   position: fixed;
